css/index.css
@charset "UTF-8";

body {
	background-image: url("../images/home_image.jpg");
	background-repeat: no-repeat;
	background-size: cover;
}

.container {
	/*
	border: 0;
	width: 100%;
	margin-left: 0;
	margin-right: 0;
	padding-left: 0px;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	*/
	position: relative;
}

.container h4 {
	position: relative;
	top: 40px;
	left: -120px;
	color: black;
}

.container a {
	position: absolute;
}

.title {
	display: inline;
	width: 100%;
	font-weight: bold;
	font-style: normal;
	font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
	color: #0098ff;
  text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
                 0px -5px 35px rgba(255,255,255,0.3);
	letter-spacing: 2px;
	font-size: 85px;
	position: relative;
	top: 25px;
	right: 125px;
}

.button {
  border-radius: 0;
	background-color: #0099ff;
	border: none;
	color: white;
	transition-duration: 0.4s;
	padding: 15px 32px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	font-size: 16px;
}

.button:hover {
    background-color: #d3d3d3;
    color: black;
		text-decoration: none;
}

.oppContainer {
	position: relative;
	top: 100px;
}

#signUpBtn {
	background-color: #bd01bd;
	top: 55px;
	right: 150px;
}

#loginBtn {
	background-color: #2ad200;
	top: 55px;
	right: -40px;
}

#employerBtn {
	background-color: #00da9e;
	position: absolute;
	top: 500px;
	right: 590px;
	padding: 50px 80px;
}

